[build-system]
requires = ["setuptools>=67.8.0,<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pykotor"
version = "1.8.0"
description = "Read, modify and write files used by KotOR's game engine."
authors = [{name = "NickHugi"}]
maintainers = [{name = "th3w1zard1", email = "halomastar@gmail.com"}]
readme = {file = "../../README.md", content-type = "text/markdown"}
license = {text = "LGPL-3.0-or-later License"}
keywords = ["kotor", "library", "holocron", "pykotor", "star", "wars", "knights"]
requires-python = ">=3.8"
dependencies = [
    "loggerplus>=0.1.3",
    "ply>=3.11,<4",
]

[project.optional-dependencies]
font = [
    "pillow>=9.5; python_implementation == 'CPython'",
    "pillow>10,<11.1.0; python_implementation == 'PyPy'",
]
gl = [
    "numpy>=1.22",
    "PyOpenGL~=3.1",
    "PyGLM>=2.0,<2.8; python_implementation == 'CPython'",
]
secure_xml = ["defusedxml~=0.7"]
encodings = [
    "charset-normalizer>=2.0,<3.4; python_version<\"3.9\"",
    "charset-normalizer>=2.0; python_version>=\"3.9\"",
]

[project.urls]
homepage = "https://github.com/th3w1zard1/PyKotor"
documentation = "https://github.com/th3w1zard1/PyKotor/blob/master/README.md"
repository = "https://github.com/th3w1zard1/PyKotor.git"
issues = "https://github.com/th3w1zard1/PyKotor/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
