[build-system]
requires = [
    "setuptools>=42,<70",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name="PyKotorFont"
description="Work with KOTOR's font textures and txi files."
version="1.7"
requires-python = ">= 3.7"
dependencies = [
    "ply>=3.11,<4",     # required for the nss compiler lexer
    "numpy~=1.22",      # probably required by PyKotorGL
    "charset-normalizer>=2.0,<3.4",  # used for localized string decodings
    "defusedxml~=0.7",  # secure XML parsing
    "pykotor>=1.7",
    "Pillow>=9.5",
]
authors = [
  {name = "NickHugi"},
]
maintainers = [
  {name = "th3w1zard1", email = "halomastar@gmail.com"},
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "LGPL-3.0-or-later License"}
keywords = ["kotor", "library", "holocron", "toolset", "pykotor", "editor", "holopatcher", "tslpatcher"]

[tool.poetry]
name = "pykotorfont"
version = "1.0.0"
description = "Work with KOTOR's font textures and txi files."
authors = ["NickHugi"]
maintainers = ["Benjamin Auquite <halomastar@gmail.com>"]
readme = "README.md"
license = "LGPL-3.0-or-later License"
keywords = ["kotor", "library", "holocron", "toolset", "pykotor", "editor", "holopatcher", "tslpatcher", "translation"]


[tool.poetry.dependencies]
python = "^3.8"
pykotor = "^1.7"
Pillow = "^9.5"



[project.urls]
Homepage = "https://github.com/NickHugi/PyKotor"
Documentation = "https://github.com/NickHugi/PyKotor/blob/master/README.md"
Repository = "https://github.com/NickHugi/PyKotor.git"
Issues = "https://github.com/NickHugi/PyKotor/issues"
#Changelog = "https://github.com/NickHugi/PyKotor/blob/master/CHANGELOG.md"


[tool.poetry.urls]
Homepage = "https://github.com/NickHugi/PyKotor"
Documentation = "https://github.com/NickHugi/PyKotor/blob/master/README.md"
Repository = "https://github.com/NickHugi/PyKotor.git"
Issues = "https://github.com/NickHugi/PyKotor/issues"
#Changelog = "https://github.com/NickHugi/PyKotor/blob/master/CHANGELOG.md"