[build-system]
requires = ["setuptools>=67.8.0,<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pykotorfont"
version = "1.8.0"
description = "Font rendering module for PyKotor - handles TXI/TGA font generation."
authors = [{name = "NickHugi"}]
maintainers = [{name = "th3w1zard1", email = "halomastar@gmail.com"}]
readme = {file = "../../README.md", content-type = "text/markdown"}
license = {text = "LGPL-3.0-or-later License"}
keywords = ["kotor", "font", "txi", "tga", "pykotor"]
requires-python = ">=3.8"
dependencies = [
    "pykotor>=1.8.0",
    "pillow>=9.5; python_implementation == 'CPython'",
    "pillow>10,<11.1.0; python_implementation == 'PyPy'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0; python_version>=\"3.8\"",
]

[project.urls]
homepage = "https://github.com/th3w1zard1/PyKotor"
documentation = "https://github.com/th3w1zard1/PyKotor/blob/master/README.md"
repository = "https://github.com/th3w1zard1/PyKotor.git"
issues = "https://github.com/th3w1zard1/PyKotor/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.poetry]
name = "pykotorfont"
version = "1.8.0"
description = "Font rendering extension for PyKotor"
authors = ["NickHugi"]
maintainers = ["Benjamin Auquite <halomastar@gmail.com>"]
readme = "../../README.md"
packages = [{ include = "pykotor", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
pykotor = "^1.8.0"

[tool.poetry.urls]
homepage = "https://github.com/th3w1zard1/PyKotor"
documentation = "https://github.com/th3w1zard1/PyKotor/blob/master/README.md"
repository = "https://github.com/th3w1zard1/PyKotor.git"
issues = "https://github.com/th3w1zard1/PyKotor/issues"
