[build-system]
requires = [
    "setuptools>=42,<70",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name="PyKotorGL"
version="1.7"
description="A Python library that can render most modules from the game Knights of the Old Republic and its sequel."
authors = [{name = "NickHugi"}]
maintainers = [{name = "th3w1zard1", email = "halomastar@gmail.com"}]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "LGPL-3.0-or-later License"}
keywords = ["kotor", "library", "holocron", "toolset", "pykotor", "editor", "holopatcher", "tslpatcher"]
requires-python = ">= 3.8"
dependencies = ["ply>=3.11,<4"]  # required for the nss compiler lexer

[project.optional-dependencies]
font = [
  "pillow>=9.5; python_implementation == 'CPython'",       # required for TXI/TGA fonts (CPython)
  "pillow>10,<11.1.0; python_implementation == 'PyPy'",    # required for TXI/TGA fonts (PyPy)
]
secure_xml           = ["defusedxml~=0.7"]    # secure XML parsing
encodings = ["charset-normalizer>=2.0,<3.4"]  # used for localized string decodings

[project.urls]
Homepage = "https://github.com/NickHugi/PyKotor"
Documentation = "https://github.com/NickHugi/PyKotor/blob/master/README.md"
Repository = "https://github.com/NickHugi/PyKotor.git"
Issues = "https://github.com/NickHugi/PyKotor/issues"
#Changelog = "https://github.com/NickHugi/PyKotor/blob/master/CHANGELOG.md"