[build-system]
requires = ["setuptools>=67.8.0,<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pykotorgl"
version = "1.8.0"
description = "OpenGL rendering module for PyKotor - renders KotOR modules and scenes."
authors = [{name = "NickHugi"}]
maintainers = [{name = "th3w1zard1", email = "halomastar@gmail.com"}]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "LGPL-3.0-or-later License"}
keywords = ["kotor", "opengl", "rendering", "pykotor", "gl", "3d", "mdl", "mdx"]
requires-python = ">=3.8"
dependencies = [
    "pykotor>=1.8.0",
    "numpy>=1.22",
    "PyOpenGL~=3.1",
    "PyGLM>=2.0,<2.8; python_implementation == 'CPython'",
]

[project.optional-dependencies]
gl_accel = ["PyOpenGL-accelerate>=3.1.10"]
dev = [
    "pytest>=7.0.0,<8.0.0; python_version>=\"3.8\"",
]

[project.urls]
homepage = "https://github.com/th3w1zard1/PyKotor"
documentation = "https://github.com/th3w1zard1/PyKotor/blob/master/README.md"
repository = "https://github.com/th3w1zard1/PyKotor.git"
issues = "https://github.com/th3w1zard1/PyKotor/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.poetry]
name = "pykotorgl"
version = "1.8.0"
description = "OpenGL rendering extension for PyKotor"
authors = ["NickHugi", "Benjamin Auquite <halomastar@gmail.com>"]
maintainers = ["Benjamin Auquite <halomastar@gmail.com>"]
readme = "README.md"
packages = [{ include = "pykotor", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
pykotor = "^1.8.0"
numpy = ">=1.22"
PyOpenGL = "~3.1"
PyGLM = ">=2.0,<2.8; python_implementation == 'CPython'"

[tool.poetry.optional-dependencies]
PyOpenGL_accelerate = ">=3.1.10"

[tool.poetry.urls]
homepage = "https://github.com/th3w1zard1/PyKotor"
documentation = "https://github.com/th3w1zard1/PyKotor/blob/master/README.md"
repository = "https://github.com/th3w1zard1/PyKotor.git"
issues = "https://github.com/th3w1zard1/PyKotor/issues"

########################################################
## define only linter configurations below this point ##
########################################################

[tool.ruff]
extend = "../../pyproject.toml"

[tool.ruff.lint]
ignore = [
    "N",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["ALL"]
"__init__.py" = ["I001", "F401"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.mccabe]
max-complexity = 25

[tool.style]
based_on_style = "pep8"
split_before_named_assigns = true
split_complex_comprehension = true
split_arguments_when_comma_terminated = true

[tool.pylintrc]
max-line-length = 175
