[build-system]
requires = [
    "setuptools>=42,<70",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name="HoloPatcher"
description="A faster, multi-platform alternative to TSLPatcher written in Python."
version="1.5.3"
requires-python = ">= 3.7"
dependencies = [
    "requests",                     # for 'check for updates' feature.
    "charset-normalizer>=2.0,<3.4"  # optional but recommended, auto-detect encoding of INI files
#    "pykotor>=1.7"
]
authors = [{name = "NickHugi"}]
maintainers = [{name = "th3w1zard1", email = "halomastar@gmail.com"}]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "GPLv3 License"}
keywords = ["kotor", "library", "holo", "patcher", "pykotor", "star", "wars", "knights", "holopatcher", "tslpatcher"]

[project.urls]
Homepage = "https://deadlystream.com/files/file/2243-holopatcher/"
Documentation = "https://github.com/NickHugi/PyKotor/wiki/Installing-Mods-with-HoloPatcher"
Repository = "https://github.com/NickHugi/PyKotor.git"
Issues = "https://github.com/NickHugi/PyKotor/issues"
#Changelog = "https://github.com/NickHugi/PyKotor/blob/master/CHANGELOG.md"
