[build-system]
requires = ["setuptools>=42,<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HoloPatcher"
description = "A faster, cross-platform alternative to TSLPatcher written in Python."
version = "1.5.3"
requires-python = ">= 3.8"
dependencies = [
    "requests>=2.25.0,<2.32.0; python_version<\"3.9\"", # for 'check for updates' feature.
    "requests>=2.25.0; python_version>=\"3.9\"",        # for 'check for updates' feature.
    "charset-normalizer>=2.0,<3.4",                     # optional but recommended, auto-detect encoding of INI files
]
authors = [{ name = "NickHugi" }]
maintainers = [{ name = "th3w1zard1", email = "halomastar@gmail.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "LGPL-3.0-or-later License" }
keywords = [
    "kotor",
    "library",
    "holo",
    "patcher",
    "pykotor",
    "star",
    "wars",
    "knights",
    "holopatcher",
    "tslpatcher",
]

[tool.poetry]
name = "HoloPatcher"
description = "A faster, cross-platform alternative to TSLPatcher written in Python."
version = "1.5.3"
authors = ["NickHugi"]
maintainers = ["Benjamin Auquite <halomastar@gmail.com>"]
readme = "README.md"
license = "LGPL-3.0-or-later License"
keywords = [
    "kotor",
    "library",
    "holo",
    "patcher",
    "pykotor",
    "star",
    "wars",
    "knights",
    "holopatcher",
    "tslpatcher",
]

[project.optional-dependencies]
updates = ["requests", "pycryptodome"]
rtf = ["pypandoc", "PyWebView"]

[tool.poetry.extras]
updates = ["requests", "pycryptodome"]
rtf = ["pypandoc", "PyWebView"]

[project.urls]
Homepage = "https://deadlystream.com/files/file/2243-holopatcher/"
Documentation = "https://github.com/NickHugi/PyKotor/wiki/Installing-Mods-with-HoloPatcher"
Repository = "https://github.com/NickHugi/PyKotor.git"
Issues = "https://github.com/NickHugi/PyKotor/issues"
#Changelog = "https://github.com/NickHugi/PyKotor/blob/master/CHANGELOG.md"


[tool.poetry.urls]
homepage = "https://github.com/th3w1zard1/PyKotor"
documentation = "https://github.com/th3w1zard1/PyKotor/blob/master/README.md"
repository = "https://github.com/th3w1zard1/PyKotor.git"
issues = "https://github.com/th3w1zard1/PyKotor/issues"
#Changelog = "https://github.com/th3w1zard1/PyKotor/blob/master/CHANGELOG.md"
