[build-system]
requires = ["setuptools>=45", "wheel", "pip>=21.0"]
build-backend = "setuptools.build_meta"

[project]
name = "holocron-ai"
version = "0.1.0"
description = "A Star Wars character AI chat interface using PyQt and LLMs"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "PyKotor Team" }
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pylint.messages_control]
disable = ["C0111", "C0103"]

[tool.black]
line-length = 88
target-version = ['py38']
