[build-system]
requires = ["setuptools>=67.8.0,<70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HolocronToolset"
description = "A PyQt5-backed program with a collection of tools and editors that make it easy to work with kotor files"
version = "3.1.1"
requires-python = ">= 3.8"
dependencies = [
  "certifi>=2021.10.8",
  "idna>=3.11",                                     # Tested with 3.3
  "jsmin>=3.0.1",
  "Markdown>=3.4.4,<3.9; python_version<\"3.9\"",
  "Markdown>=3.4.4; python_version>=\"3.9\"",
  "numpy>=1.19.0,<1.25.0; python_version<\"3.9\"",
  "numpy>=1.19.0; python_version>=\"3.9\"",
  "PyQt5-Qt5~=5.15; python_implementation == 'CPython'",
  "PyQt5-sip~=12.10; python_implementation == 'CPython'",
  "PyQt5~=5.15; python_implementation == 'CPython'",
  "PySide6; python_implementation == 'PyPy'",
  "qtpy>=2.4.3",
  "requests>=2.25.0,<2.32.0; python_version<\"3.9\"",
  "requests>=2.25.0; python_version>=\"3.9\"",
  "urllib3>=1.26.0,<2.0.0; python_version<\"3.9\"",
  "urllib3>=1.26.0; python_version>=\"3.9\"",
  "watchdog>=2.0.0,<6.0.0; python_version<\"3.9\"",
  "watchdog>=2.0.0; python_version>=\"3.9\"",
  "jsonpickle>=4.1.1",
  "send2trash>=1.8.3",
  #    "pykotor>=1.7",
  #    "pykotor[gl]>=1.7"
]
authors = [{ name = "NickHugi" }]
maintainers = [{ name = "th3w1zard1", email = "halomastar@gmail.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "LGPL-3.0-or-later License" }
keywords = [
  "kotor",
  "pyqt5",
  "holocron",
  "toolset",
  "pykotor",
  "star",
  "wars",
  "starwars",
  "toolkit",
  "opengl",
  "designer",
  "module",
  "modding",
  "dlgeditor",
  "AIO",
  "editor",
  "GFF",
]

[project.urls]
Homepage = "https://github.com/NickHugi/PyKotor"
Documentation = "https://github.com/NickHugi/PyKotor/blob/master/README.md"
Repository = "https://github.com/NickHugi/PyKotor.git"
Issues = "https://github.com/NickHugi/PyKotor/issues"
#Changelog = "https://github.com/NickHugi/PyKotor/blob/master/CHANGELOG.md"

########################################################
## define only linter configurations below this point ##
########################################################

[tool.pyright]
reportIncompatibleMethodOverride = false
reportOptionalMemberAccess = false

[tool.pyright.defineConstant]
PYQT5 = true
PYSIDE2 = false
PYQT6 = false
PYSIDE6 = false

[tool.basedpyright]
reportIncompatibleMethodOverride = false
reportOptionalMemberAccess = false

[tool.basedpyright.defineConstant]
PYQT5 = true
PYSIDE2 = false
PYQT6 = false
PYSIDE6 = false

[tool.ruff]
extend = "../../pyproject.toml"

[tool.ruff.lint]
ignore = [
  "N",       # disable snake_case vs PascalCase/camelCase checks for pyqt5
  "SLF001",  # private member access
  "PLR0913", # too many arguments in function definition
  "FBT001",  # boolean-typed positional argument in function definition
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["ALL"]
".github/*py" = ["INP001"]
"__init__.py" = ["I001", "F401"]
"globalsettings.py" = ["I001", "F401"]
"./src/toolset/*.py" = ["FBT003", "N802", "N803", "N806", "A001"]
"./src/toolset/uic/*.py" = ["ALL"]                                # uic's are auto-generated
"resources_rc.py" = ["ALL"]
".mdx" = ["ALL"]
".mdl" = ["ALL"]
"pykotor/resource/formats/ncs/compiler/*.py" = ["ALL"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.mccabe]
max-complexity = 25

[tool.style]
based_on_style = "pep8"
split_before_named_assigns = true
split_complex_comprehension = true
split_arguments_when_comma_terminated = true

[tool.pylintrc]
max-line-length = 175
